--- a/style/css/page_layout.css
+++ b/style/css/page_layout.css
@@ -46,6 +46,46 @@ h2 {
   letter-spacing: 1px;
 }
 
+h2:after {
+  content: "";
+  display: block;
+  height: 4px;
+  background-color: #8bc34a;
+  width: 100px;
+  margin: 0 auto;
+  margin-top: 15px;
+}
+
+blockquote {
+  font-style: italic;
+  position: relative;
+  background-color: #8bc34a;
+  padding: 10px 20px;
+  color: white;
+}
+
+blockquote:before {
+  content: "\201c";
+  font-size: 500%;
+  display: block;
+  position: absolute;
+  left: -30px;
+  top: -20px;
+}
+
+cite {
+  font-size: 90%;
+  display: block;
+  text-align: center;
+  color: white;
+}
+
+cite img {
+  width: 100px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
 #__next {
   display: table;
   width: 100%;
