How to get there

--- a/style/css/page_layout.css
+++ b/style/css/page_layout.css
@@ -56,6 +56,11 @@ h2:after {
   margin-top: 15px;
 }
 
+section {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
 blockquote {
   font-style: italic;
   position: relative;
